--- a/quesionaire_page.html
+++ b/quesionaire_page.html
@@ -199,8 +199,8 @@ $(function () {
         template += '{{#optionsls}}';
         template += '<label for="{{optionvalue}}">{{optiontext}}</label>';
         template += '<input	type="radio" ';
-        template += 'name ="{{optionvalue}}" ';
-        template += 'id="{{optionvalue}}" ';
+        template += 'name ="{{qname}}" ';
+        template += 'id="{{qid}}" ';
         template += 'required="{{required}}" ';
         template += ' />';
         template += '{{/optionsls}}';
