--- a/questionhome.html
+++ b/questionhome.html
@@ -275,8 +275,8 @@ $(function () {
         template += '{{#optionsls}}';
         template += '<label for="{{optionvalue}}">{{optiontext}}</label>';
         template += '<input	type="radio" ';
-        template += 'name ="{{optionvalue}}" ';
-        template += 'id="{{optionvalue}}" ';
+        template += 'name ="{{qname}}" ';
+        template += 'id="{{qid}}" ';
         template += 'required="{{required}}" ';
         template += ' />';
         template += '{{/optionsls}}';
