--- a/questionhome.html
+++ b/questionhome.html
@@ -24,6 +24,7 @@
 
     <!-- Styling for smaller screens -->
     <link type="text/css" href="css/smallscreen.css" rel="stylesheet" media="all and (max-height: 360px)"/>
+    <link type="text/css" href="css/qsmallscreen.css" rel="stylesheet" media="all and (max-height: 360px)"/>
 
     <!-- Custom styling -->
     <link href="css/custom.css" rel="stylesheet">
