MOdifed to work on IE

--- a/questionhome.html
+++ b/questionhome.html
@@ -77,9 +77,9 @@
         </form>
     </div>
     <div date-role="content" style="padding: 2%">
-        <a data-role="button" data-inline="true" href="#" data-icon="arrow-l" data-iconpos="notext" id="prev_btn">
+        <a data-role="button" data-inline="true" href="#" data-icon="arrow-l" data-iconpos="left" id="prev_btn">Previous
         </a>
-        <a data-role="button" data-inline="true" href="#" data-icon="arrow-r" data-iconpos="notext" id="next_btn">
+        <a data-role="button" data-inline="true" href="#" data-icon="arrow-r" data-iconpos="right" id="next_btn">Next
         </a>
     </div>
 </div>
