--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
     <title>myQuestions</title>
 
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <![endif]-->
+
     <link href="css/codiqa.ext.min.css" rel="stylesheet">
     <link href="css/jquery.mobile.theme-1.3.1.min.css" rel="stylesheet">
     <link href="css/robot.css" rel="stylesheet">
