--- a/quesionaire_page.html
+++ b/quesionaire_page.html
@@ -7,6 +7,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <![endif]-->
+
     <link href="css/codiqa.ext.min.css" rel="stylesheet">
     <link href="css/jquery.mobile.theme-1.3.1.min.css" rel="stylesheet">
     <link href="css/robot.css" rel="stylesheet">
@@ -47,11 +51,9 @@
                 </div>
 
             </form>
-            <a data-role="button" data-inline="true" data-transition="none" href="#" data-icon="arrow-l"
-               data-iconpos="notext">
+            <a data-role="button" data-inline="true" data-transition="none" href="#" data-icon="arrow-l" >Previous
             </a>
-            <a data-role="button" data-inline="true" data-transition="none" href="#" data-icon="arrow-r"
-               data-iconpos="notext">
+            <a data-role="button" data-inline="true" data-transition="none" href="#" data-icon="arrow-r" >Next
             </a>
     </div>
 </div>
